--- a/package.json
+++ b/package.json
@@ -18,45 +18,46 @@
   "scripts": {
     "ng": "ng",
     "start": "electron .",
-    "test": "ng test",
+    "test": "ng serve",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build": "ng build",
     "pack": "electron-builder --dir",
-    "dist": "ng build && electron-builder",
-    "electron": "ng build && electron ."
+    "dist": "ng build && electron-builder && electron-builder install-app-deps",
+    "electron": "ng build && electron .",
+    "postinstall": "install-app-deps"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/core": "^0.4.3",
-    "@angular/animations": "^5.2.7",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular-devkit/core": "^0.4.5",
+    "@angular/animations": "^5.2.9",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "electron-log": "^2.2.14",
     "font-awesome": "^4.7.0",
-    "primeng": "^5.2.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular/cli": "^1.7.3",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/language-service": "^5.2.9",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "electron": "^1.8.3",
     "electron-packager": "^11.1.0",
+    "electron-rebuild": "^1.7.3",
     "electron-squirrel-startup": "^1.0.0",
     "electron-winstaller": "^2.6.4",
     "jasmine-core": "~2.6.2",
@@ -70,6 +71,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "pg": "^7.4.1",
     "popper.js": "^1.14.0",
+    "primeng": "^5.2.3",
     "protractor": "~5.1.2",
     "rcedit": "^1.0.0",
     "ts-node": "~3.2.0",
