--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "sprinttool",
   "productName": "SprintTool",
-  "version": "1.11",
+  "version": "1.1.1",
   "main": "main.js",
   "license": "MIT",
   "description": "Sprint Tool app",
   "build": {
     "appId": "sprinttoolTMA",
-    "asar": false,
+    "asar": true,
     "directories": {
       "output": "winsetup"
     },
